v3.6.0 (2021.08.xx)
  - Update SQLite database engine to version 3.36.0
  - Update cURL library to version 7.78.0
  - Fix bug causing full refresh of guide data during startup if there are 'Unknown' channels in the lineup

v3.5.2 (2021.05.27)
  - Update SQLite database engine to version 3.35.5
  - Update cURL library to version 7.77.0
  - Prevent recording rule padding values from exceeding specified limits (1 hour for start padding, 3 hours for end padding)
  - Fix bug that incorrectly set recording rule padding values to 30 seconds instead of zero seconds when specified as "0 min" in Kodi
  - Apply channel logo image associated with a recording as the icon for that recording when available

v3.5.1 (2021.04.09)
  - Update SQLite database engine to version 3.35.4
  - Update cURL library to version 7.76.0
  - Fix bug preventing timer rules assigned a specific channel number to be changed back to 'Any channel'
  - Change how start and end times are reported for Record series timer rules so they show as 'Any day at any time'

v3.5.0 (2021.03.16)
  - Update SQLite database engine to version 3.35.1
  - Update cURL library to version 7.75.0
  - Fix bug that could cause unnecessary triggering of both channel and channel group updates
  - Fix race condition that could cause a "Database is locked" error to be logged during Kodi startup
  - Fix bug preventing timers and timer rules from updating when Kodi EPG 'Future days to display' setting has changed
  - Add new "Radio Channels" settings category and associated options to enable radio channel mapping
  - Adjust reported Electronic Program Guide (EPG) original air values based on the system time zone

v3.4.1 (2021.02.06)
  - Enable in-place addon migration during installation of Kodi Matrix RC1 or later
  - Fix bug that allowed startup tasks to execute out of order on systems with a low precision system clock