@@ -2,6 +2,7 @@ v3.6.0 (2021.08.xx)
   - Update SQLite database engine to version 3.36.0
   - Update cURL library to version 7.78.0
   - Fix bug causing full refresh of guide data during startup if there are 'Unknown' channels in the lineup
+  - Remove defunct 'Demo Channels' channel group
 
 v3.5.2 (2021.05.27)
   - Update SQLite database engine to version 3.35.5
